Overlay knapp + följaupp

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -9,29 +9,366 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
-        <link rel="stylesheet" href="/resources/demos/style.css">
         <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+        <script src="/static/script.js" defer></script>
     </head>
-    <body>
+    <body class="blue">
 
         <div id="menu">
             <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
             <h1>DIGGINS</h1>
+            <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
         </div>
 
+        <article class="grid double-column">
+            <section class="folder" id="historik-bakgrund">
+                <p>Datum:</p>
+                <input type="text" id="datepicker">
+                <button class="button-orange" type="button" onclick="getActivity()">Ok</button>
+            </section>
 
-        <section id="historik-bakgrund">
-            <p>Datum: <input type="text" id="datepicker"></p>
-            <div id="calender">
-                <button type="button" onclick="getActivity()">Ok</button>
+            <section class="folder">
+                <p class="grey">SENASTE</p>
+                <div class="tableFixHead">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Aktivtet</th>
+                                <th>Datum</th>
+                                <th>Rapporterat datum</th>
+                                <th>Kostnadsställe</th>
+                                <th>Antal deltagare</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                                <td>2.1</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-            <div id="historik">
-                <p1>Senaste</p1>
-            </div>
-        </section>
-        <script src="/script.js" defer></script>
+                <div class="tableFixHead">
+                    <table>
+                        <thead>
+                            <tr>
+                            <th>Aktivtet</th>
+                            <th>Namn</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1.1</td>
+                                <td>2.1</td>
+                            </tr>
+                            <tr>
+                                <td>1.2</td>
+                                <td>2.2</td>
+                            </tr>
+                            <tr>
+                                <td>1.3</td>
+                                <td>2.3</td>
+                            </tr>
+                            <tr>
+                                <td>1.4</td>
+                                <td>2.4</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                            <tr>
+                                <td>1.5</td>
+                                <td>2.5</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </article>
     </body>
 
 </html>
