--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -15,46 +15,53 @@
         <title>Stockholms Stadsmission: DIGGINS Rapporteringsverktyg</title>
     </head>
     <body>
-        <div id="menu">
-            <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1>DIGGINS</h1>
-            <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
-            <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
+        <span id="messagebox" class="hidden">
+            Händelsen är registrerad.
+            <button class="button-blue" onclick="hide()">OK</button>
+        </span>
+        <div id="overlay">
+            <div id="menu">
+                <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+                <h1>DIGGINS</h1>
+                <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
+                <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
+            </div>
+            <nav>
+                <h2 class="button-blue"><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
+                <h2 class="button-blue"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
+                <h2 class="button-blue active"><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
+            </nav>
+            <section class="folder">
+                <article>
+                    <form class="grid double-column grid-column-05fr" onsubmit="return false">
+                        <section class="grid single-column">
+                            <label for="aktivitet">Typ av Aktivitet*</label>
+                            <select id="aktivitet" name="aktivitet">
+                                <option th:each="alias: ${aliases}" th:value="${alias.activity.internalId}" th:text="${alias.id.definition}"></option>
+                            </select>
+                            <label for="antal">Volym*</label>
+                            <input type="number" id="antal" name="antal" required min="1" max="50" placeholder="" oninvalid="this.setCustomValidity('Ange Volym (1-50)')" oninput="this.setCustomValidity('')"/>
+                            <label for="occurrence_date">Datum*</label>
+                            <input type="date" id="occurrence_date" value="" required placeholder="" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
+                            <label class="switch">Namnge deltagare
+                                <input type="checkbox" onchange="showOrHideParticipants(this)">
+                                <span class="slider round"></span>
+                            </label>
+                        </section>
+                        <section class="grid double-column blur" id="personer">
+                            <span>Personer</span>
+                            <span>Valda</span>
+                            <span class="container grey" id="buttoncontainer"></span>
+                            <span class="container grey" id="chosencontainer"></span>
+                        </section>
+                        <section>
+                            <button class="button-orange" onclick="postActivity()">Registrera händelse</button>
+                        </section>
+                    </form>
+                </article>
+            </section>
         </div>
-        <nav>
-            <h2 class="button-blue"><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
-            <h2 class="button-blue"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
-            <h2 class="button-blue active"><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
-        </nav>
-        <section class="folder">
-            <article>
-                <form class="grid double-column grid-column-05fr" onsubmit="return false">
-                    <section class="grid single-column">
-                        <label for="aktivitet">Typ av Aktivitet*</label>
-                        <select id="aktivitet" name="aktivitet">
-                            <option th:each="alias: ${aliases}" th:value="${alias.activity.internalId}" th:text="${alias.id.definition}"></option>
-                        </select>
-                        <label for="antal">Volym*</label>
-                        <input type="number" id="antal" name="antal" required min="1" max="50" placeholder="" oninvalid="this.setCustomValidity('Ange Volym (1-50)')" oninput="this.setCustomValidity('')"/>
-                        <label for="occurrence_date">Datum*</label>
-                        <input type="date" id="occurrence_date" value="" required placeholder="" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
-                        <label class="switch">Namnge deltagare
-                            <input type="checkbox" onchange="showOrHideParticipants(this)">
-                            <span class="slider round"></span>
-                        </label>
-                    </section>
-                    <section class="grid double-column blur" id="personer">
-                        <span>Personer</span>
-                        <span>Valda</span>
-                        <span class="container grey" id="buttoncontainer"></span>
-                        <span class="container grey" id="chosencontainer"></span>
-                    </section>
-                    <section>
-                        <button class="button-orange" onclick="postActivity()">Registrera händelse</button>
-                    </section>
-                </form>
-            </article>
-        </section>
+
         <script>
             Date.prototype.yyyymmdd = function() {
             let mm = this.getMonth() + 1; // getMonth() is zero-based
