Följaupp kan nu hämta aktivteter.

--- a/foljaupp.html
+++ b/foljaupp.html
@@ -13,6 +13,7 @@
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
         <script src="/static/script.js" defer></script>
+        <script src="/static/ajax.js" defer></script>
     </head>
     <body class="blue">
 
@@ -26,13 +27,13 @@
             <section class="folder" id="historik-bakgrund">
                 <p>Datum:</p>
                 <input type="text" id="datepicker">
-                <button class="button-orange" type="button" onclick="getActivity()">Ok</button>
+                <button class="button-orange" type="button" onclick="getActivitiesPerDate()">Ok</button>
             </section>
 
             <section class="folder">
                 <p class="grey">SENASTE</p>
                 <div class="tableFixHead">
-                    <table>
+                    <table id="activity">
                         <thead>
                             <tr>
                                 <th>Aktivtet</th>
@@ -43,200 +44,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                                <td>2.1</td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="tableFixHead">
-                    <table>
+                    <table id="activity_contents">
                         <thead>
                             <tr>
                             <th>Aktivtet</th>
@@ -244,126 +56,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
-                                <td>1.1</td>
-                                <td>2.1</td>
-                            </tr>
-                            <tr>
-                                <td>1.2</td>
-                                <td>2.2</td>
-                            </tr>
-                            <tr>
-                                <td>1.3</td>
-                                <td>2.3</td>
-                            </tr>
-                            <tr>
-                                <td>1.4</td>
-                                <td>2.4</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
-                            <tr>
-                                <td>1.5</td>
-                                <td>2.5</td>
-                            </tr>
                         </tbody>
                     </table>
                 </div>
