Same as previous commit

--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -49,6 +49,11 @@
                             </label>
                         </section>
                         <section class="grid double-column blur" id="personer">
+                                <label for="search">Sök (Namn eller UNO-Kod)</label>
+                                <span class="container">
+                                <input class="flex-grow" type="text" placeholder="Sök för att filtrera..." id="search">
+                                <span class="button-orange button-delete" id="deletebutton"></span>
+                                </span>
                             <span>Personer</span>
                             <span>Valda</span>
                             <span class="container grey" id="buttoncontainer"></span>
