--- a/foljaupp.html
+++ b/foljaupp.html
@@ -61,6 +61,13 @@
                 </div>
             </section>
         </article>
+        <script>
+            Date.prototype.yyyymmdd = function() {
+            let mm = this.getMonth() + 1; // getMonth() is zero-based
+            let dd = this.getDate();
+            return [this.getFullYear(), (mm>9 ? '' : '0') + mm, (dd>9 ? '' : '0') + dd].join('-');};
+            let now = new Date();
+            document.getElementById("datepicker").value = now.yyyymmdd();
+        </script>
     </body>
-
 </html>
