--- a/reg-handelse.html
+++ b/reg-handelse.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <span id="messagebox" class="hidden">
-            Händelsen är registrerad.
+            <p></p>
             <button class="button-blue" onclick="hide()">OK</button>
         </span>
         <div id="overlay">
@@ -56,8 +56,8 @@
                                 </span>
                             <span>Personer</span>
                             <span>Valda</span>
-                            <span class="container grey" id="buttoncontainer"></span>
-                            <span class="container grey" id="chosencontainer"></span>
+                            <span class="container white" id="buttoncontainer"></span>
+                            <span class="container white" id="chosencontainer"></span>
                         </section>
                         <section>
                             <button form="reghendelse" class="button-orange">Registrera händelse</button>
