--- a/ankommande.html
+++ b/ankommande.html
@@ -14,44 +14,50 @@
         <script src="/static/ajax.js" defer></script>
     </head>
     <body>
-        <div id="menu">
-            <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
-            <h1>DIGGINS</h1>
-            <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
-            <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
+        <span id="messagebox" class="hidden">
+            <p></p>
+            <button class="button-blue" onclick="hide()">OK</button>
+        </span>
+        <div id="overlay">
+            <div id="menu">
+                <a href="/"><img src="/static/SSM_logga_utan_bakgrund.svg" alt="Stockholms Stadsmissions logga" id="ssm-logga"></a>
+                <h1>DIGGINS</h1>
+                <span class="grey" id="chosen" th:text="${costCenterName}" th:ccId="${costCenterId}"></span>
+                <a th:href="'/foljaupp/'+${costCenterId}"><section class="button-blue">Dagsrapporter</section></a>
+            </div>
+
+            <nav>
+                <h2 class="button-blue active"><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
+                <h2 class="button-blue"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
+                <h2 class="button-blue"><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
+            </nav>
+
+            <section class="folder">
+                <article>
+                    <form id="ankommandeform" class="grid double-column grid-column-05fr" onsubmit="postArrival();return false;">
+                        <section class="grid single-column align-start">
+    <!--                    <input type="text" id="UNO" name="UNO" required placeholder="" oninvalid="this.setCustomValidity('Ange Ankommande Person')" oninput="this.setCustomValidity('')"/>-->
+                            <label for="date">Datum</label>
+                            <input type="date" id="date" name="date" required pattern="^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
+                            <button class="button-orange" form="ankommandeform">Registrera ankommande</button>
+                        </section>
+                        <section class="grid single-column">
+                            <label for="search">Sök (Namn eller UNO-Kod)</label>
+                            <span class="container">
+                                <input class="flex-grow" type="text" placeholder="Sök för att filtrera..." id="search">
+                                <span class="button-orange button-delete" id="deletebutton"></span>
+                            </span>
+                            <div class="grid double-column">
+                                <span>Personer</span>
+                                <span>Valda</span>
+                                <span class="container white" id="buttoncontainer"></span>
+                                <span class="container white" id="chosencontainer"></span>
+                            </div>
+                        </section>
+                    </form>
+                </article>
+            </section>
         </div>
-
-        <nav>
-            <h2 class="button-blue active"><a th:href="'/ankommande/'+${costCenterId}">Ankommande</a></h2>
-            <h2 class="button-blue"><a th:href="'/reg-deltagare/'+${costCenterId}">Ny Deltagare</a></h2>
-            <h2 class="button-blue"><a th:href="'/reg-handelse/'+${costCenterId}">Aktivitet</a></h2>
-        </nav>
-
-        <section class="folder">
-            <article>
-                <form class="grid double-column grid-column-05fr" onsubmit="return false;">
-                    <section class="grid single-column align-start">
-<!--                    <input type="text" id="UNO" name="UNO" required placeholder="" oninvalid="this.setCustomValidity('Ange Ankommande Person')" oninput="this.setCustomValidity('')"/>-->
-                        <label for="date">Datum</label>
-                        <input type="date" id="date" name="date" required pattern="^\d{4}-(0[1-9]|1[0-2])-(0[1-9]|[12][0-9]|3[01])$" oninvalid="this.setCustomValidity('Ange Datum')" oninput="this.setCustomValidity('')"/>
-                        <button class="button-orange" onclick="postArrival()">Registrera ankommande</button>
-                    </section>
-                    <section class="grid single-column">
-                        <label for="search">Sök (Namn eller UNO-Kod)</label>
-                        <span class="container">
-                            <input class="flex-grow" type="text" placeholder="Sök för att filtrera..." id="search">
-                            <span class="button-orange button-delete" id="deletebutton"></span>
-                        </span>
-                        <div class="grid double-column">
-                            <span>Personer</span>
-                            <span>Valda</span>
-                            <span class="container grey" id="buttoncontainer"></span>
-                            <span class="container grey" id="chosencontainer"></span>
-                        </div>
-                    </section>
-                </form>
-            </article>
-        </section>
         <script>
             Date.prototype.yyyymmdd = function() {
             let mm = this.getMonth() + 1; // getMonth() is zero-based
